<resources>
    <string name="app_name">UTS_PAM</string>
    <string name="deskripsi">
        perpustakaan digital yang memudahkan anda menemukan dan menikmati berbagai koleksi buku untuk sumber daya belajar. Jelajahi dunia pengetahuan hanya dengan satu sentuhan jari!
    </string>
    <string name="button_text">Selanjutnya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="add">AddBook</string>
    <string name="manajemen_buku_perpustakaan">Manajemen Buku Perpustakaan</string>
    <string name="management_buku_perpustakaan">Management Buku Perpustakaan</string>
    <string name="tambah_buku">TAMBAH BUKU</string>
    <string name="close">Close</string>
    <string name="judul_buku">Judul Buku</string>
    <string name="masukan_judul_buku">Masukan judul buku</string>
    <string name="penulis_buku">Penulis Buku</string>
    <string name="masukan_penulis_buku">Masukan penulis buku</string>
    <string name="gambar_buku">Gambar Buku</string>
    <string name="choose_file">Choose File</string>
    <string name="deskripsi_buku">Deskripsi Buku</string>
    <string name="deskripsi_book">Deskripsi</string>
    <string name="tambahkan_buku">Tambahkan Buku</string>
    <string name="deskripsi_view_book">Deskripsi</string>
    <string name="judul">Judul</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_buku">Edit Buku</string>
</resources>