<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_login"
        tools:ignore="UselessParent">

        <androidx.cardview.widget.CardView
            android:layout_width="320dp"
            android:layout_height="320dp"
            android:backgroundTint="@color/bg_card_login"
            android:layout_gravity="center"
            android:layout_marginVertical="164dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="4dp">
                    <TextView
                        android:id="@+id/emaillabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="34sp"
                        android:autofillHints=""
                        android:hint="@string/email_hint"
                        android:padding="4sp"
                        android:inputType="textEmailAddress"
                        android:textSize="20sp"
                        android:layout_below="@id/emaillabel"
                        android:background="@drawable/border"
                        android:maxLines="1"
                        android:layout_marginTop="6sp"
                        />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="18sp"
                    android:padding="4sp">
                    <TextView
                        android:id="@+id/passwordlabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textSize="16sp"
                        android:inputType="textEmailAddress"
                        android:textStyle="bold"
                        tools:ignore="TextViewEdits" />

                    <EditText
                        android:id="@+id/passwordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="34sp"
                        android:hint="@string/password_hint"
                        android:inputType="textVisiblePassword"
                        android:padding="4sp"
                        android:textSize="20sp"
                        android:layout_below="@id/passwordlabel"
                        android:background="@drawable/border"
                        android:maxLines="1"
                        android:layout_marginTop="6sp"
                        tools:ignore="ExtraText" />

                    <Button
                        android:id="@+id/btnlogin"
                        android:layout_width="360dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="89dp"
                        android:textColor="@color/white"
                        android:backgroundTint="@color/blue_bar"
                        android:text="@string/login"/>
                </RelativeLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>