<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageViewBook"
            android:layout_width="70sp"
            android:layout_height="100sp"
            android:background="@drawable/border"
            android:layout_marginRight="26sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/judulTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/judul"
                    android:textColor="@color/black"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    />

                <ImageView
                    android:id="@+id/moreoptions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/elips_menu"
                    android:layout_alignParentEnd="true"
                    />
            </RelativeLayout>

            <TextView
                android:id="@+id/deskripsiTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deskripsi_view_book"
                android:textColor="@color/deskripsi_book_view"
                android:textSize="12sp"
                android:layout_marginTop="9sp"
                />

            <TextView
                android:id="@+id/penulisTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/penulis_buku"
                android:textSize="14sp"
                android:layout_marginTop="9sp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>